Fixed overlay on IE

--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -922,6 +922,7 @@ body {
     bottom: 0;
     left: 0;
     background: rgba(0, 0, 0, 0.7);
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#80000000', endColorstr='#80000000');
     z-index: 2;
     
     &.share, &.ie {
